fix: add overflow-x hidden in body

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -199,6 +199,7 @@ body {
   font-family: 'Blender Pro';
   font-weight: 500;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 .main {
